fix icon alignment and size

--- a/src/flatpickr_base.scss
+++ b/src/flatpickr_base.scss
@@ -37,19 +37,19 @@
             background: $months_background;
             color: $months_color;
 
-            padding: 4px 0;
+            padding: 4px 0 2px 0;
             text-align: center;
-            font-size: 135%;
+            
 
             .flatpickr-prev-month,
             .flatpickr-next-month  {
                 text-decoration: none;
                 cursor: pointer;
-
-                i {
-                    font-size: 0.75rem;
-                }
                 
+                i {
+                    position: relative;
+                    bottom: -3.2px
+                }
 
                 &:hover {
                     color: $today_color
@@ -63,6 +63,7 @@
 
             .flatpickr-current-month
             {
+                font-size: 135%;
                 font-weight: 300;
 
                 span { font-weight: 700 }
